hphp/hack/test/typecheck/coeffects/poly_var_reassign/using.php
<?hh

abstract class V { abstract const ctx C; }

class X implements IDisposable {
  public function __dispose()[]: void {}
}

function using_expr(V $v)[$v::C]: void {
  using ($v = new X()) {}
}
